--- a/webchat-frontend/src/style.css
+++ b/webchat-frontend/src/style.css
@@ -41,13 +41,12 @@ svg {
 }
 
 .title { 
-    font-family: Pacifico; 
+    font-family: 'Pacifico', cursive; 
     font-size: 36px; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 700; 
     line-height: 23px;
-    cursor: pointer;
     margin-top: 6px;
     margin-left: -16px;
 }
@@ -91,16 +90,54 @@ svg {
     margin-bottom: auto;
 }
 
+#home-screen-container {
+    width: 100%;
+}
+
 #home-screen-row {
     display: flex;
     height: 100%;
+    width: 100%;
     align-items: center;
     align-self: center;
     align-content: center;
     justify-self: center;
+    justify-content: center;
     justify-items: center;
     margin-top: auto;
     margin-bottom: auto;
+}
+
+#channel-user-display {
+    display: flex;
+    justify-content: center;
+}
+
+#channel-user-card {
+    height: 450px;
+    width: 220px;
+    min-width: 210px;
+}
+
+.card-footer {
+    padding: .25rem 1.25rem;
+    display: flex;
+    align-items: center;
+}
+
+#create-channel-dropdown {
+    background-color: rgb(248, 249, 250);
+}
+
+#message-display {
+    display: flex;
+    justify-content: center;
+}
+
+#message-card {
+    height: 500px;
+    width: 90%;
+    min-width: 210px;
 }
 
 #view-profile-row {
@@ -148,17 +185,6 @@ svg {
     justify-items: center;
     justify-content: center;
 }
-
-#channel-card {
-    height: 450px;
-    width: 220px;
-}
-
-#message-card {
-    height: 500px;
-    width: 600px;
-}
-
 
 #view-profile-col {
     color: whitesmoke;
